ajustes de factura

--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -163,12 +163,12 @@
                     
                     <tr>
                         <td class="tg-oe15">Factor potencia</td>
-                        <td class="tg-wk8r">Media</td>
-                        <td class="tg-wk8r">Acumulado</td>
+                        <td class="tg-wk8r">FP Medio</td>
+                        <td class="tg-wk8r">FP Acumulado</td>
                         <td class="tg-wk8r" colspan="2"></td>
+                        <td class="tg-wk8r">Activa total</td>
                         <td class="tg-wk8r"></td>
-                        <td class="tg-wk8r"></td>
-                        <td class="tg-wk8r"></td>
+                        <td class="tg-wk8r">Activa + Reactiva</td>
                         <td class="tg-wk8r">Porcentaje</td>
                     </tr>
                     <tr>
