--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -293,7 +293,7 @@
 <div class="historico-consumo-container">
 
     <div style="background-color: #b9b9b9; margin: 1% 3% 1% 3%;">
-        <fusioncharts width="100%" height="100%" type="Column2d" [dataSource]="dataSource">
+        <fusioncharts width="100%" height="100%" type="scrollstackedcolumn2d" [dataSource]="dataSource">
         </fusioncharts>
     </div>
     <div style="background-color: #b9b9b9; margin: 1% 3% 1% 7%;">
