Ajustes factura de consumo

--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -237,6 +237,12 @@
     margin: 0% 5% 0% 5%;
 }
 
+.totales-tablas {
+    color: black; 
+    font-weight: bold;
+    background-color: #b9b9b9;
+}
+
 .total-pagar {
     display: flex;
     justify-content: space-between;
