--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -315,7 +315,7 @@
     <h5>Origen de la electricidad</h5>
 </div>  
 
-<div class="origen-container">
+<div class="origen-container"  *ngIf="dataInvoice.cargo">
 
     <div class="origen-energia">
         <div>
