medidores virtuales habilitados

--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -136,7 +136,7 @@
                     </tr>
                     
                 </tbody>
-                <!-- <tbody *ngFor="let data of dataInvoice.vmedidor">
+                <tbody *ngFor="let data of dataInvoice.vmedidor">
                     <tr>
                       <td class="tg-hvao">Ajustes</td>
                       <td class="tg-zk76" colspan="8">{{data.descripcion}}</td>
@@ -158,7 +158,7 @@
                         <td class="tg-wk8r"> kWhA </td>
                     </tr>
 
-                </tbody> -->
+                </tbody>
                 <tbody>
                     
                     <tr>
