--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -39,7 +39,7 @@
                     <p class="etiqueta-der">{{ vencimiento | date:'dd/M/yyyy':'GMT' }}</p>
                     <p class="etiqueta-der">{{hoy | date:'dd/M/yyyy':'GMT' }}</p>
                     <p class="etiqueta-der">{{dataInvoice.medidor[0].historico.fechaAnterior | date:'dd/M/yyyy':'GMT' }}  hasta  {{dataInvoice.medidor[0].historico.fechaActual | date:'dd/M/yyyy':'GMT' }} </p>
-                    <p class="etiqueta-der"> {{diaFacturacion}} </p>
+                    <p class="etiqueta-der"> {{dataInvoice.diasFacturados}}</p>
                     <p class="etiqueta-der"> xxxx </p>
                     <ng-template #Vacio>
                         <p class="etiqueta-der"> --- </p>
